tests/compile-fail/intrinsics/ctlz_nonzero.stderr
error: Undefined Behavior: `ctlz_nonzero` called on 0
  --> $DIR/ctlz_nonzero.rs:13:9
   |
LL |         ctlz_nonzero(0u8); //~ ERROR `ctlz_nonzero` called on 0
   |         ^^^^^^^^^^^^^^^^^ `ctlz_nonzero` called on 0
   |
   = help: this indicates a bug in the program: it performed an invalid operation, and caused Undefined Behavior
   = help: see https://doc.rust-lang.org/nightly/reference/behavior-considered-undefined.html for further information
           
   = note: inside `main` at $DIR/ctlz_nonzero.rs:13:9

note: some details are omitted, run with `MIRIFLAGS=-Zmiri-backtrace=full` for a verbose backtrace

error: aborting due to previous error

